feat: add /getsolution endpoint to fetch crossword and solution by ID Not delete all of the user's answers while evaluating scores. If a person has attempted a crossword once, they can't submit it again. Organized solutions and crosswords by  their id(day they will be uploaded on)
