# handlers/crossword.go
@@ -2,6 +2,7 @@ package handlers
 
 import (
 	"encoding/json"
+	"fmt"
 	"net/http"
 	"os"
 
@@ -20,7 +21,8 @@ import (
 // @Failure 500 {object} map[string]string "Crossword not found or parse error"
 // @Router /crossword [get]
 func GetCrossword(c *gin.Context){
-	file, err := os.ReadFile("crosswordJSON.json")
+	filePath := "data/day1/crosswordJSON.json"
+	file, err := os.ReadFile(filePath)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": "Crossword not found"})
 		return
@@ -62,12 +64,74 @@ func SubmitCrossword(c *gin.Context){
 	}
 	input.UserID = userID
 
-	var existingAnswer model.CrosswordAnswer
-	result := config.DB.Where("user_id = ? AND crossword_id = ?", userID, input.CrosswordID).Assign(input).FirstOrCreate(&existingAnswer)
-    if result.Error != nil {
+	var existing model.CrosswordAnswer
+    if err := config.DB.
+        Where("user_id = ? AND crossword_id = ?", userID, input.CrosswordID).
+        First(&existing).Error; err == nil {
+        c.JSON(http.StatusBadRequest, gin.H{
+            "error": "You have already submitted this crossword.",
+        })
+        return
+    }
+
+    if err := config.DB.Create(&input).Error; err != nil {
         c.JSON(http.StatusInternalServerError, gin.H{"error": "Database error"})
         return
     }
 
 	c.JSON(http.StatusOK, gin.H{"message": "Answer stored"})
+}
+
+// @Summary      Get Crossword and Solution
+// @Description  Fetches both the crossword question (grid, clues, etc.) and the corresponding solution for a given crossword ID.
+// @Tags         Crossword
+// @Accept       json
+// @Produce      json
+// @Param        crossword_id  body  int  true  "ID of the crossword to fetch"
+// @Success      200  {object}  map[string]interface{}  "Crossword and solution successfully fetched"
+// @Failure      400  {object}  map[string]string        "Bad request or solution not found"
+// @Failure      500  {object}  map[string]string        "Internal server error while reading files"
+// @Router       /getsolution [post]
+func GetSolution(c *gin.Context){
+	var b struct{
+		CrosswordID uint `json:"crossword_id"`
+	}
+
+	if err:= c.ShouldBindJSON(&b); err != nil{
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid request format, provide crossword_id"})
+	}
+
+	filePath := fmt.Sprintf("data/day%d/solutionJSON.json", b.CrosswordID)
+	file, err := os.ReadFile(filePath)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Solution not found"})
+		return
+	}
+
+	var solution model.CrosswordSolution
+	err = json.Unmarshal(file, &solution)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Error extracting crossword solution"})
+		return
+	}
+
+	filePath = fmt.Sprintf("data/day%d/crosswordJSON.json", b.CrosswordID)
+	file, err = os.ReadFile(filePath)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Crossword not found"})
+		return
+	}
+	var crossword model.Crossword
+	err = json.Unmarshal(file, &crossword)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Error extracting crossword"})
+		return
+	}
+
+	response := gin.H{
+		"crossword": crossword,
+		"solution":  solution,
+	}
+
+	c.JSON(http.StatusOK, response)
 }
